# backloggd-scraper

./: .gitignore  README.md  backloggd-games.json  main.py  pyproject.toml
.github/workflows/: release.yml  ruff.yml  ty.yml
