[project]
name = "backloggd-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]

[tool.ruff.format]
docstring-code-format = true

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.analysis]
replace-imports-with-any = ["requests.**", "bs4.**"]
